<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wahana.createwahana.CreateWahanaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tv_titlepage_create_wahana"
            style="@style/text_tittle_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_create_wahana"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/ln_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorLineGrey"
            android:orientation="vertical"
            android:padding="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titlepage_create_wahana">

            <TextView
                android:id="@+id/tv_title_create_wahana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_create_title" />

            <EditText
                android:id="@+id/et_titlevalue_create_wahana"
                style="@style/text_content_style_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_value_create_title"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorLineGrey"
            android:orientation="vertical"
            android:padding="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ln_judul">

            <TextView
                android:id="@+id/tv_titledesc_create_wahana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_create_desc" />

            <EditText
                android:id="@+id/et_desc_create_wahana"
                style="@style/text_content_style_grey"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="@string/txt_value_create_desc"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="@dimen/text_14"
                android:gravity="top"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorLineGrey"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ln_desc">

            <TextView
                android:id="@+id/tv_title_uploadimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_image" />

            <TextView
                android:id="@+id/tv_uploadimage"
                style="@style/DropdownUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:hint="@string/txt_pilih_image" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorLineGrey"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ln_image">

            <TextView
                android:id="@+id/tv_title_uploadfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_file" />

            <TextView
                android:id="@+id/tv_uploadfile"
                style="@style/DropdownUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:hint="@string/txt_pilih_file" />

        </LinearLayout>



        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:indeterminateDrawable="@drawable/progressbar"
            android:visibility="gone"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />


        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_orange"
            android:text="@string/txt_create"
            android:textColor="@android:color/white"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ln_file" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>