<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_12"
    tools:context=".ui.multimedia.detailmultimedia.DetailMultimediaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_multimedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_multimedia_1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginVertical="@dimen/margin_8"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ll_detailmultimedia_1">

            <ImageView
                android:id="@+id/iv_content_detailmultimedia"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_folder"
                android:scaleType="fitXY"

                app:layout_constraintStart_toStartOf="@id/cl_multimedia_1"
                app:layout_constraintEnd_toEndOf="@id/cl_multimedia_1"
                app:layout_constraintTop_toTopOf="@id/cl_multimedia_1"
                app:layout_constraintBottom_toBottomOf="@id/cl_multimedia_1">
            </ImageView>

            <ImageView
                android:id="@+id/icon_content_multimedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_video"

                app:layout_constraintStart_toStartOf="@id/cl_multimedia_1"
                app:layout_constraintEnd_toEndOf="@id/cl_multimedia_1"
                app:layout_constraintTop_toTopOf="@id/cl_multimedia_1"
                app:layout_constraintBottom_toBottomOf="@id/cl_multimedia_1">
            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_detailmultimedia_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/margin_8"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_multimedia_1">


            <TextView
                android:id="@+id/tv_contenttitle"
                style="@style/tv_title_list_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name">
            </TextView>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profilepic"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_70"
                    android:src="@drawable/dummy_profile"
                    android:layout_weight="1.3"
                    android:layout_gravity="center">
                </de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.4"
                    android:layout_gravity="center"
                    android:weightSum="2"
                    android:padding="@dimen/margin_4">

                    <TextView
                        android:id="@+id/tv_name_detailmultimedia"
                        style="@style/tv_content_list_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name">
                    </TextView>

                    <TextView
                        android:id="@+id/tv_date_detailmultimedia"
                        style="@style/tv_date_list_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name">
                    </TextView>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_totalview_multimedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_viewers"
                    android:layout_gravity="center"
                    android:layout_weight="1.3">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_desc_multimedia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/margin_8"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_detailmultimedia_1"
            app:layout_constraintBottom_toTopOf="@+id/ll_comment_multimedia">

            <TextView
                android:id="@+id/tv_title_desc"
                style="@style/tv_title_list_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_description_title">
            </TextView>

            <TextView
                android:id="@+id/tv_multimedia_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_isidescription_title">
            </TextView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_comment_multimedia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/margin_8"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_desc_multimedia">

            <TextView
                android:id="@+id/tv_title_comment"
                style="@style/tv_title_list_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_comment_title">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_multimedia_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_list_comment">
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/ll_write_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4"
                android:orientation="vertical">

                <!--            app:layout_constraintStart_toStartOf="parent"-->
                <!--            app:layout_constraintEnd_toEndOf="parent"-->
                <!--            app:layout_constraintBottom_toBottomOf="parent"-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_margin="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etCommentMultimedia"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_post"
                            android:hint="@string/txt_hint_writecomment"
                            android:padding="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:orientation="vertical"
                        android:background="@drawable/bg_post"
                        android:padding="@dimen/margin_4">

                        <ImageView
                            android:id="@+id/tvPost"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:src="@drawable/ic_send"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar_createmultimedia"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:indeterminateDrawable="@drawable/progressbar"
            android:visibility="gone"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>